--- a/index.html
+++ b/index.html
@@ -10,7 +10,15 @@
 </head>
 <body style='margin : 0px; overflow: hidden;'>
 	<a-scene embedded arjs='sourceType: webcam;'>
-		<a-sphere src="https://raw.githubusercontent.com/aframevr/sample-assets/master/assets/images/space/earth_atmos_4096.jpg" radius="1" segments-height="53">
+        <!-- define your gltf asset -->
+<a-assets>
+  <a-asset-item id="tree" src="/images/scene.gltf"></a-asset-item>
+</a-assets>
+<!-- use your gltf model -->
+<a-entity gltf-model="##tree"></a-entity>
+<a-entity gltf-model="#tree" scale="0.009 0.009 0.009"></a-entity>
+<a-text value="Hello, World!"></a-text>
+		<!-- <a-sphere src="https://raw.githubusercontent.com/aframevr/sample-assets/master/assets/images/space/earth_atmos_4096.jpg" radius="1" segments-height="53">
             <a-animation attribute="scale"
                  dur="1000"
                  from= "1 1 1"
@@ -18,7 +26,7 @@
                  direction='alternate-reverse'
                  easing= "ease-in-out-circ"     
                  repeat="indefinite"></a-animation>
-        </a-sphere>
+        </a-sphere> -->
 		<a-marker-camera preset='hiro'></a-marker-camera>
 	</a-scene>
 </body>
